# Agora

./: .cursorrules  .env.example  .gitignore  BLANK_PAGE_FIX.md  CHANGES_SINCE_JAN17.md  CLOUD_SETUP_GUIDE.md  COLAB_INSTRUCTIONS.md  CONTEXT_PRIME_DETAILS.md  CONTEXT_PRIME_QUICKSTART.md  DASHBOARD_FILTERING_ISSUE.md  DEPLOYMENT.md  DEPLOYMENT_FIX_COMPLETE.txt  DIRECT_SUPABASE_SETUP.md  END_TO_END_GUIDE.md  FINAL_STATUS.md  FIXED_VARIABLE_NAME_ERROR.md  FIX_ORG_FILTERING.md  HACKATHON_FILES.md  HOW_TELEMETRY_WORKS.md  IMPLEMENTATION_SUMMARY.md  INGESTOR_README.md  INTELLIGENCE_INFRASTRUCTURE_COMPLETE.md  JUPYTER_COLAB_GUIDE.md  LOCAL_SETUP.md  LOGGING.md  MENU_NAVIGATION.txt  ORG_ID_ISSUE_RESOLVED.md  ORG_VS_PROJECT_ID.md  PRESENTATION.md  QUICK_DEMO.md  QUICK_FIXES.md  QUICK_START.txt  QUICK_TEST.md  README.md  READY_TO_RUN.md  REDEPLOY_NOW.txt  RUN_ME.txt  RUN_MIGRATION.md  SAAS_READINESS_AUDIT.md  SIMPLE_FIX.md  (+81 more)
agora/: __init__.py  agora_tracer.py  cloud_client.py  cloud_uploader.py  engine.py  instrument_openai.py  logging_config.py  supabase_uploader.py  telemetry.py  token_monitor.py  wide_events.py
agora/dev/: __init__.py  cli.py  codebase_analyzer.py  context_manager.py  node_generator.py
agora/ingestor/: __init__.py  embeddings.py  extractor.py  models.py  storage.py  supabase_storage.py
docs/: CONTEXT_PRIME_API.md  OTEL_INTEGRATION.md  agoradev-guide.md  password-reset.md
examples/: Decorator_chat_example.ipynb  README.md  README_COLAB_MONITORING.md  agoradev_demo.py  api_key_example.py  api_key_example_with_spans.py  basic_workflow.py  chatbot_2nodes.py  chatbot_decorator.py  chatbot_flow.py  chatbot_interactive.py  chatbot_with_wide_events.py  cloud_chat_app_example.py  cloud_platform_example.py  colab_demo.py  colab_rag_with_monitoring.py  conditional_routing.py  decorator_example.py  enable_verbose_logging.py  error_handling.py  ingest_agora_example.py  llm_workflow.py  local_usage_without_platform.py  minimal_local_example.py  openai_example.py  semantic_memory_test.py  simple_chatbot.py  simple_example.py  traceloop_integration_example.py  txtai_semantic_test.py
examples/decorator_example_telemetry/: traces_1762768076.jsonl
platform/: README.md
platform/backend/: database.py  main.py  models.py  requirements.txt  test_context_prime.sh
platform/frontend/: .env.local  index.html  package-lock.json  package.json
platform/mcp-server/: LOGGING.md  config.json  server.py  test_mcp.sh  test_server.py
scripts/: agora-context.sh  agora-hook.sh
supabase/migrations/: 20251126031421_create_core_tables.sql  20251126031440_create_workflow_tables.sql  20251126031513_create_telemetry_tables.sql  20251126050501_fix_api_keys_policies.sql  (+9 more)
(+62 files in other folders)
