[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agora"
version = "0.1.0"
description = "Agora: Minimal flow-based framework with auditing and observability for LLM workflows."
authors = [
    { name = "thebnbrkr", email = "your-email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8,<4.0"
# Core dependencies - minimal for basic workflow functionality
dependencies = []

keywords = ["workflow", "flow", "llm", "pipeline", "async", "audit", "observability", "telemetry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
"Homepage" = "https://github.com/JerzyKultura/Agora"
"Bug Tracker" = "https://github.com/JerzyKultura/Agora/issues"
"Repository" = "https://github.com/JerzyKultura/Agora"
"Documentation" = "https://github.com/JerzyKultura/Agora#readme"

[project.optional-dependencies]
# Telemetry and observability features
telemetry = [
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "traceloop-sdk>=0.20.0,<1.0.0",
    "supabase>=2.0.0,<3.0.0",
    "nest-asyncio>=1.5.0,<2.0.0"
]

# CLI development tools
agoradev = [
    "click>=8.0.0,<9.0.0",
]

# Semantic search and embeddings
semantic = [
    "sentence-transformers>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0"
]

# Development dependencies
dev = [
    "pytest>=7.0,<8.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "black>=23.0,<25.0",
    "flake8>=6.0,<8.0",
    "mypy>=1.0,<2.0",
]

# Convenience: install all features
all = [
    "opentelemetry-api>=1.20.0,<2.0.0",
    "opentelemetry-sdk>=1.20.0,<2.0.0",
    "traceloop-sdk>=0.20.0,<1.0.0",
    "supabase>=2.0.0,<3.0.0",
    "nest-asyncio>=1.5.0,<2.0.0",
    "click>=8.0.0,<9.0.0",
    "sentence-transformers>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
]

[project.scripts]
agora-dev = "agora.dev.cli:cli"

[tool.setuptools]
packages = ["agora"]

[tool.setuptools.package-data]
agora = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
